fixed cancellation of cleaning service and overlapping of frequent services

--- a/src/app/lazy-loaded/shared/cleaning-service/cleaning-service.component.scss
+++ b/src/app/lazy-loaded/shared/cleaning-service/cleaning-service.component.scss
@@ -39,3 +39,8 @@ a{
 :host ::ng-deep .back-button {
     color: #124c69 !important;
 }
+
+:host ::ng-deep .p-button:disabled{
+    cursor: not-allowed;
+    pointer-events: all !important;
+}
